--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,35 @@
 {
+    "name": "lee/food-crawler",
+    "description": "The PHP Food Crawler is for crawling ipeen website",
+    "type": "library",
     "require": {
+        "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.2",
         "symfony/dom-crawler": "^3.2",
-        "symfony/css-selector": "^3.2"
+        "symfony/css-selector": "^3.2",
+        "illuminate/database": "^5.5",
+        "vlucas/phpdotenv": "^2.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "php-coveralls/php-coveralls": "^1.0"
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "peter279k",
+            "email": "peter279k@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "Food\\Crawler\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Food\\Crawler\\": "tests"
+        }
     }
 }
