--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.2",
         "symfony/dom-crawler": "^3.2",
-        "symfony/css-selector": "^3.2",
-        "illuminate/database": "^5.5",
-        "vlucas/phpdotenv": "^2.4"
+        "symfony/css-selector": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
